# cpp_lib_example

./: CMakeLists.txt  README.md  Диаграмма UML.drawio  Объяснение архитектурных решений.md
docker/: deb.dockerfile  rpm.dockerfile
include/employee_lib/: EmployeeDescr.h  EmployeeManager.h
src/: CMakeLists.txt  Employee.cpp  Employee.h  EmployeeManager.cpp  Foreman.cpp  Foreman.h  Manager.cpp  Manager.h  RelationManager.cpp  RelationManager.h  SalaryCalculator.cpp  SalaryCalculator.h  Worker.cpp  Worker.h
test/: CMakeLists.txt  main.cpp
